--- a/index.html
+++ b/index.html
@@ -188,79 +188,86 @@
     
     <div id="falbum">
       <a><img src="img/croped/img1.jpeg" data-full="img/gallery/land.jpeg" alt="img1" loading="lazy"></a>
-      <a><img src="img/croped/img2.jpg" data-full="img/gallery/tr.jpg" alt="img2" loading="lazy"></a>
-      <a><img src="img/croped/img3.jpg" data-full="img/gallery/img1(3).jpg" alt="img3" loading="lazy"></a>
-      <a><img src="img/croped/img4.jpeg" data-full="img/gallery/img1(4).jpeg" alt="img4" loading="lazy"></a>
-      <a><img src="img/croped/img5.jpeg" data-full="img/gallery/img1(5).jpeg" alt="img5" loading="lazy"></a>
-      <a><img src="img/croped/img6.jpg" data-full="img/gallery/img1(6).jpg" alt="img6" loading="lazy"></a>
-      <a><img src="img/croped/img7.jpg" data-full="img/gallery/img1(7).jpg" alt="img7" loading="lazy"></a>
-      <a><img src="img/croped/img8.jpeg" data-full="img/gallery/img1(8).jpeg" alt="img8" loading="lazy"></a>
-      <a><img src="img/croped/img9.jpeg" data-full="img/gallery/img1(9).jpeg" alt="img9" loading="lazy"></a>
-      <a><img src="img/croped/img10.jpg" data-full="img/gallery/img1(10).jpg" alt="img10" loading="lazy"></a>
-      <a><img src="img/croped/img11.jpeg" data-full="img/gallery/img1(11).jpeg" alt="img11" loading="lazy"></a>
-      <a><img src="img/croped/img12.jpeg" data-full="img/gallery/portrait.jpeg" alt="img12" loading="lazy"></a>
-      <a><img src="img/croped/img13.jpg" data-full="img/gallery/img1(13).jpg" alt="img13" loading="lazy"></a>
-      <a><img src="img/croped/img14.jpg" data-full="img/gallery/img1(15).jpg" alt="img14" loading="lazy"></a>
-      <a><img src="img/croped/img15.jpeg" data-full="img/gallery/img1(16).jpeg" alt="img15" loading="lazy"></a>
-      <a><img src="img/croped/img16.jpeg" data-full="img/gallery/cc.jpeg" alt="img16" loading="lazy"></a>
-      <a><img src="img/croped/img17.jpeg" data-full="img/gallery/dog.jpeg" alt="img17" loading="lazy"></a>
+      <a><img src="img/croped/ritratti/3C637E92-5291-437B-B8E4-7BC9CA4E89A3.jpeg" data-full="img/croped/ritratti/js/3C637E92-5291-437B-B8E4-7BC9CA4E89A3.jpeg" alt="img6" loading="lazy"></a>
+      <a><img src="img/croped/reportage/img13.jpg"data-full="img/croped/reportage/img13.jpg" alt="img6" loading="lazy"></a>
+      <a><img src="img/croped/matrimoni/croped/Coppie (1 di 1).png"       data-full="img/croped/matrimoni/Coppie (1 di 1).png" alt="img6" loading="lazy"></a>
+      <a><img src="img/croped/ritratti/09DFD939-89F3-4DF6-96FA-E339F3D7BA41.jpeg" data-full="img/croped/ritratti/js/09DFD939-89F3-4DF6-96FA-E339F3D7BA41.jpeg" alt="img9" loading="lazy"></a>
       <a><img src="img/croped/pet/croped/0627F98E-22F8-4D30-9291-EDF5F13DFB04.jpeg" data-full="img/croped/pet/0627F98E-22F8-4D30-9291-EDF5F13DFB04.jpeg" alt="img6"></a>
-      <a><img src="img/croped/pet/cane1.png" alt="img6" data-full="img/croped/pet/cane1.png" alt=""></a>
-      <a><img src="img/croped/pet/croped/5E577042-C75E-493C-B651-652FD6364219.jpeg" data-full="img/croped/pet/5E577042-C75E-493C-B651-652FD6364219.jpeg" alt="img9"></a>
-      <a><img src="img/croped/pet/croped/A50B0F01-7E59-45A9-B0F1-1D30B7B16EC8.jpeg" data-full="img/croped/pet/A50B0F01-7E59-45A9-B0F1-1D30B7B16EC8.jpeg" alt="img12" loading="lazy"></a>
+      <a><img src="img/croped/eventi/croped/Comp (2 di 1)-min.jpg"         data-full="img/croped/eventi/Comp (2 di 1)-min.jpg" alt="img6" loading="lazy"></a>
+      <a><img src="img/croped/ritratti/243F999B-1D1C-447F-A19B-5311A96698D0.jpeg" data-full="img/croped/ritratti/js/243F999B-1D1C-447F-A19B-5311A96698D0.jpeg" alt="img12" loading="lazy"></a>
+      <a><img src="img/croped/reportage/croped/Campanelli 13.jpg"data-full="img/croped/reportage/Campanelli 13.jpg" alt="img6" loading="lazy"></a>
+      <a><img src="img/croped/aziende/img1(10).jpg"       data-full="img/croped/aziende/img1(10).jpg" alt="img6" loading="lazy"></a>
+      <a><img src="img/croped/reportage/croped/Campanelli 3.jpg"data-full="img/croped/reportage/Campanelli 3.jpg" alt="img6" loading="lazy"></a>
+      <a><img src="img/croped/ritratti/457D0CE7-0732-4354-87A5-0B079F90A095.jpeg" data-full="img/croped/ritratti/js/457D0CE7-0732-4354-87A5-0B079F90A095.jpeg" alt="img12" loading="lazy"></a>
+      <a><img src="img/croped/img2.jpg" data-full="img/gallery/tr.jpg" alt="img2" loading="lazy"></a>
       <a><img src="img/croped/pet/cane2.png" alt="img6" data-full="img/croped/pet/cane2.png" alt=""></a>
+      <a><img src="img/croped/reportage/croped/Campanelli 14.jpg"data-full="img/croped/reportage/Campanelli 14.jpg" alt="img6" loading="lazy"></a>
+      <a><img src="img/croped/eventi/croped/Federico (198 di 1)-min.jpg"   data-full="img/croped/eventi/Federico (198 di 1)-min.jpg" alt="img6" loading="lazy"></a>
+      <a><img src="img/croped/aziende/img14.jpg"       data-full="img/croped/aziende/img14.jpg" alt="img6" loading="lazy"></a>
+      <a><img src="img/croped/matrimoni/croped/Coppie (2 di 1).png"       data-full="img/croped/matrimoni/Coppie (2 di 1).png" alt="img9" loading="lazy"></a>
+      <a><img src="img/croped/img3.jpg" data-full="img/gallery/img1(3).jpg" alt="img3" loading="lazy"></a>
+      <a><img src="img/croped/pet/cane1.png" alt="img6" data-full="img/croped/pet/cane1.png" alt=""></a>
+      <a><img src="img/croped/aziende/img20.jpeg"       data-full="img/croped/aziende/img20.jpeg" alt="img6" loading="lazy"></a>
+      <a><img src="img/croped/img4.jpeg" data-full="img/gallery/img1(4).jpeg" alt="img4" loading="lazy"></a>
+      <a><img src="img/croped/pet/croped/5E577042-C75E-493C-B651-652FD6364219.jpeg" data-full="img/croped/pet/5E577042-C75E-493C-B651-652FD6364219.jpeg" alt="img9"></a>
+      <a><img src="img/croped/eventi/croped/img7.jpg"                      data-full="img/croped/eventi/img7.jpg" alt="img6" loading="lazy"></a>
+      <a><img src="img/croped/aziende/tr.jpg"       data-full="img/croped/aziende/tr.jpg" alt="img6" loading="lazy"></a> 
+      <a><img src="img/croped/img5.jpeg" data-full="img/gallery/img1(5).jpeg" alt="img5" loading="lazy"></a>
+      <a><img src="img/croped/pet/croped/A50B0F01-7E59-45A9-B0F1-1D30B7B16EC8.jpeg" data-full="img/croped/pet/A50B0F01-7E59-45A9-B0F1-1D30B7B16EC8.jpeg" alt="img12" loading="lazy"></a>
+      <a><img src="img/croped/reportage/croped/Street Lecce (3 di 1).png"data-full="img/croped/reportage/Street Lecce (3 di 1).png" alt="img6" loading="lazy"></a>
+      <a><img src="img/croped/eventi/croped/Francesco (173 di 210).jpg"       data-full="img/croped/eventi/Francesco (173 di 210).jpg" alt="img6" loading="lazy"></a>
+      <a><img src="img/croped/aziende/Aziende (1 di 1).png"       data-full="img/croped/aziende/Aziende (1 di 1).png" alt="img6" loading="lazy"></a>
+      <a><img src="img/croped/img6.jpg" data-full="img/gallery/img1(6).jpg" alt="img6" loading="lazy"></a>
       <a><img src="img/croped/pet/croped/AF222F17-0341-42DD-A799-E519C0D621F3.jpeg" data-full="img/croped/pet/AF222F17-0341-42DD-A799-E519C0D621F3.jpeg" alt="img6"></a>
+      <a><img src="img/croped/eventi/croped/Carlotta (116 di 1).jpg"       data-full="img/croped/eventi/Carlotta (116 di 1).jpg" alt="img6" loading="lazy"></a>
+      <a><img src="img/croped/reportage/croped/Campanelli 4.jpg"data-full="img/croped/reportage/Campanelli 4.jpg" alt="img6" loading="lazy"></a>
+      <a><img src="img/croped/img7.jpg" data-full="img/gallery/img1(7).jpg" alt="img7" loading="lazy"></a>
+      <a><img src="img/croped/reportage/img14.jpg"data-full="img/croped/reportage/img14.jpg" alt="img6" loading="lazy"></a>
       <a><img src="img/croped/pet/croped/C53E71A3-5695-4E18-A219-11F0166AAAD5.jpeg" data-full="img/croped/pet/C53E71A3-5695-4E18-A219-11F0166AAAD5.jpeg" alt="img9"></a>
+      <a><img src="img/croped/eventi/croped/Luigi (122 di 1).jpg"       data-full="img/croped/eventi/Luigi (122 di 1).jpg" alt="img6" loading="lazy"></a>     
+      <a><img src="img/croped/img8.jpeg" data-full="img/gallery/img1(8).jpeg" alt="img8" loading="lazy"></a>
       <a><img src="img/croped/pet/croped/E95665E0-FDBD-4BBB-B8EB-9EF783995B7B.jpeg" data-full="img/croped/pet/E95665E0-FDBD-4BBB-B8EB-9EF783995B7B.jpeg" alt="img12"></a>
+      <a><img src="img/croped/eventi/croped/Carlotta (174 di 1).jpg"       data-full="img/croped/eventi/Carlotta (174 di 1).jpg" alt="img6" loading="lazy"></a>
+      <a><img src="img/croped/reportage/concertol.jpg"data-full="img/croped/reportage/concertol.jpg" alt="img6" loading="lazy"></a>
+      <a><img src="img/croped/img9.jpeg" data-full="img/gallery/img1(9).jpeg" alt="img9" loading="lazy"></a>
+      <a><img src="img/croped/eventi/croped/Francesco (174 di 210).jpg"       data-full="img/croped/eventi/Francesco (174 di 210).jpg" alt="img6" loading="lazy"></a>
+      <a><img src="img/croped/img10.jpg" data-full="img/gallery/img1(10).jpg" alt="img10" loading="lazy"></a>
+      <a><img src="img/croped/ritratti/925AAE51-193F-408A-BFB1-FC12AA26F59A.jpeg" data-full="img/croped/ritratti/js/925AAE51-193F-408A-BFB1-FC12AA26F59A.jpeg" alt="img12" loading="lazy"></a>
+      <a><img src="img/croped/eventi/croped/Carlotta (5 di 1).jpg"         data-full="img/croped/eventi/Carlotta (5 di 1).jpg" alt="img6" loading="lazy"></a>
+      <a><img src="img/croped/img11.jpeg" data-full="img/gallery/img1(11).jpeg" alt="img11" loading="lazy"></a>
+      <a><img src="img/croped/eventi/croped/Carlotta (4 di 1).jpg"         data-full="img/croped/eventi/Carlotta (4 di 1).jpg" alt="img6" loading="lazy"></a>
+      <a><img src="img/croped/img12.jpeg" data-full="img/gallery/portrait.jpeg" alt="img12" loading="lazy"></a>
+      <a><img src="img/croped/eventi/croped/Luigi (93 di 1)-min.jpg"data-full="img/croped/eventi/Luigi (93 di 1)-min.jpg" alt="img6" loading="lazy"></a>
+      <a><img src="img/croped/img13.jpg" data-full="img/gallery/img1(13).jpg" alt="img13" loading="lazy"></a>
+      <a><img src="img/croped/reportage/croped/Campanelli 16.jpg"data-full="img/croped/reportage/Campanelli 16.jpg" alt="img6" loading="lazy"></a>
+      <a><img src="img/croped/eventi/croped/Luigi (124 di 1).jpg"         data-full="img/croped/eventi/Luigi (124 di 1).jpg" alt="img6" loading="lazy"></a>
+      <a><img src="img/croped/reportage/croped/Street Lecce (4 di 1).png"data-full="img/croped/reportage/Street Lecce (4 di 1).png" alt="img6" loading="lazy"></a>
+      <a><img src="img/croped/img14.jpg" data-full="img/gallery/img1(15).jpg" alt="img14" loading="lazy"></a>
+      <a><img src="img/croped/eventi/croped/Carlotta (6 di 1).jpg"         data-full="img/croped/eventi/Carlotta (6 di 1).jpg" alt="img6" loading="lazy"></a>
+      <a><img src="img/croped/img15.jpeg" data-full="img/gallery/img1(16).jpeg" alt="img15" loading="lazy"></a>
+      <a><img src="img/croped/reportage/croped/Campanelli 18.jpg"data-full="img/croped/reportage/Campanelli 18.jpg" alt="img6" loading="lazy"></a>
+      <a><img src="img/croped/img16.jpeg" data-full="img/gallery/cc.jpeg" alt="img16" loading="lazy"></a>
+      <a><img src="img/croped/matrimoni/Laura Walter (25 di 1).jpg"       data-full="img/croped/matrimoni/Laura Walter (25 di 1).jpg" alt="img9" loading="lazy"></a>
+      <a><img src="img/croped/reportage/croped/Campanelli 19.jpg"data-full="img/croped/reportage/Campanelli 19.jpg" alt="img6" loading="lazy"></a>
+      <a><img src="img/croped/img17.jpeg" data-full="img/gallery/dog.jpeg" alt="img17" loading="lazy"></a>
+      <a><img src="img/croped/reportage/concerto.jpg"data-full="img/croped/reportage/concerto.jpg" alt="img6" loading="lazy"></a>
       <a><img src="img/croped/img18.jpeg" data-full="img/gallery/car.jpeg" alt="img18" loading="lazy"></a>
+      <a><img src="img/croped/reportage/croped/Street Lecce (5 di 1).png"data-full="img/croped/reportage/Street Lecce (5 di 1).png" alt="img6" loading="lazy"></a>
       <a><img src="img/croped/img19.jpeg" data-full="img/gallery/cat.jpeg" alt="img19" loading="lazy"></a>
+      <a><img src="img/croped/reportage/croped/Campanelli 2.jpg"data-full="img/croped/reportage/Campanelli 2.jpg" alt="img6" loading="lazy"></a>
       <a><img src="img/croped/img20.jpeg" data-full="img/gallery/img1(21).jpeg" alt="img20" loading="lazy"></a>
+      <a><img src="img/croped/reportage/croped/Street Lecce (2 di 1).png"data-full="img/croped/reportage/Street Lecce (2 di 1).png" alt="img6" loading="lazy"></a>
       <a><img src="img/croped/img21.jpeg" data-full="img/gallery/img1(22).jpeg" alt="img21" loading="lazy"></a>
+      <a><img src="img/croped/reportage/croped/Campanelli 5.jpg"data-full="img/croped/reportage/Campanelli 5.jpg" alt="img6" loading="lazy"></a>
       <a><img src="img/croped/img22.jpeg" data-full="img/gallery/rails.jpeg" alt="img22" loading="lazy"></a>
       <a><img src="img/croped/img23.jpeg" data-full="img/gallery/door.jpeg" alt="img23" loading="lazy"></a>
+      <a><img src="img/croped/reportage/croped/Campanelli 6.jpg"data-full="img/croped/reportage/Campanelli 6.jpg" alt="img6" loading="lazy"></a>
       <a><img src="img/croped/img24.jpeg" data-full="img/gallery/flowers.jpeg" alt="img24" loading="lazy"></a>
       <a><img src="img/croped/img25.jpeg" data-full="img/gallery/other.jpeg" alt="img25" loading="lazy"></a>
-      <a><img src="img/croped/aziende/img1(10).jpg"       data-full="img/croped/aziende/img1(10).jpg" alt="img6" loading="lazy"></a>
-      <a><img src="img/croped/aziende/img14.jpg"       data-full="img/croped/aziende/img14.jpg" alt="img6" loading="lazy"></a>
-      <a><img src="img/croped/aziende/img20.jpeg"       data-full="img/croped/aziende/img20.jpeg" alt="img6" loading="lazy"></a>
-      <a><img src="img/croped/aziende/tr.jpg"       data-full="img/croped/aziende/tr.jpg" alt="img6" loading="lazy"></a>
-      <a><img src="img/croped/aziende/Aziende (1 di 1).png"       data-full="img/croped/aziende/Aziende (1 di 1).png" alt="img6" loading="lazy"></a>
-      <a><img src="img/croped/eventi/croped/Comp (2 di 1)-min.jpg"         data-full="img/croped/eventi/Comp (2 di 1)-min.jpg" alt="img6" loading="lazy"></a>
-      <a><img src="img/croped/eventi/croped/Federico (198 di 1)-min.jpg"   data-full="img/croped/eventi/Federico (198 di 1)-min.jpg" alt="img6" loading="lazy"></a>
-      <a><img src="img/croped/eventi/croped/img3.jpg"                      data-full="img/croped/eventi/img3.jpg" alt="img6" loading="lazy"></a>
-      <a><img src="img/croped/eventi/croped/img7.jpg"                      data-full="img/croped/eventi/img7.jpg" alt="img6" loading="lazy"></a>
-      <a><img src="img/croped/eventi/croped/Luigi (93 di 1)-min.jpg"       data-full="img/croped/eventi/Luigi (93 di 1)-min.jpg" alt="img6" loading="lazy"></a>
-      <a><img src="img/croped/eventi/croped/Francesco (173 di 210).jpg"       data-full="img/croped/eventi/Francesco (173 di 210).jpg" alt="img6" loading="lazy"></a>
-      <a><img src="img/croped/eventi/croped/Carlotta (116 di 1).jpg"       data-full="img/croped/eventi/Carlotta (116 di 1).jpg" alt="img6" loading="lazy"></a>
-      <a><img src="img/croped/eventi/croped/Francesco (174 di 210).jpg"       data-full="img/croped/eventi/Francesco (174 di 210).jpg" alt="img6" loading="lazy"></a>
-      <a><img src="img/croped/eventi/croped/Luigi (122 di 1).jpg"       data-full="img/croped/eventi/Luigi (122 di 1).jpg" alt="img6" loading="lazy"></a>
-      <a><img src="img/croped/eventi/croped/Carlotta (174 di 1).jpg"       data-full="img/croped/eventi/Carlotta (174 di 1).jpg" alt="img6" loading="lazy"></a>
-      <a><img src="img/croped/eventi/croped/Carlotta (4 di 1).jpg"         data-full="img/croped/eventi/Carlotta (4 di 1).jpg" alt="img6" loading="lazy"></a>
-      <a><img src="img/croped/eventi/croped/Luigi (124 di 1).jpg"         data-full="img/croped/eventi/Luigi (124 di 1).jpg" alt="img6" loading="lazy"></a>
-      <a><img src="img/croped/eventi/croped/Carlotta (5 di 1).jpg"         data-full="img/croped/eventi/Carlotta (5 di 1).jpg" alt="img6" loading="lazy"></a>
-      <a><img src="img/croped/eventi/croped/Carlotta (6 di 1).jpg"         data-full="img/croped/eventi/Carlotta (6 di 1).jpg" alt="img6" loading="lazy"></a>
-      <a><img src="img/croped/matrimoni/croped/Coppie (1 di 1).png"       data-full="img/croped/matrimoni/Coppie (1 di 1).png" alt="img6" loading="lazy"></a>
-            <a><img src="img/croped/matrimoni/croped/Coppie (2 di 1).png"       data-full="img/croped/matrimoni/Coppie (2 di 1).png" alt="img9" loading="lazy"></a>
-            <a><img src="img/croped/matrimoni/Laura Walter (25 di 1).jpg"       data-full="img/croped/matrimoni/Laura Walter (25 di 1).jpg" alt="img9" loading="lazy"></a>
-            <a><img src="img/croped/eventi/croped/Luigi (93 di 1)-min.jpg"data-full="img/croped/eventi/Luigi (93 di 1)-min.jpg" alt="img6" loading="lazy"></a>
-            <a><img src="img/croped/reportage/croped/Campanelli 13.jpg"data-full="img/croped/reportage/Campanelli 13.jpg" alt="img6" loading="lazy"></a>
-            <a><img src="img/croped/reportage/concertol.jpg"data-full="img/croped/reportage/concertol.jpg" alt="img6" loading="lazy"></a>
-            <a><img src="img/croped/reportage/croped/Street Lecce (3 di 1).png"data-full="img/croped/reportage/Street Lecce (3 di 1).png" alt="img6" loading="lazy"></a>
-            <a><img src="img/croped/reportage/croped/Campanelli 14.jpg"data-full="img/croped/reportage/Campanelli 14.jpg" alt="img6" loading="lazy"></a>
-            <a><img src="img/croped/reportage/img13.jpg"data-full="img/croped/reportage/img13.jpg" alt="img6" loading="lazy"></a>
-            <a><img src="img/croped/reportage/concerto.jpg"data-full="img/croped/reportage/concerto.jpg" alt="img6" loading="lazy"></a>
-            <a><img src="img/croped/reportage/croped/Street Lecce (2 di 1).png"data-full="img/croped/reportage/Street Lecce (2 di 1).png" alt="img6" loading="lazy"></a>
-            <a><img src="img/croped/reportage/croped/Campanelli 16.jpg"data-full="img/croped/reportage/Campanelli 16.jpg" alt="img6" loading="lazy"></a>
-            <a><img src="img/croped/reportage/croped/Street Lecce (4 di 1).png"data-full="img/croped/reportage/Street Lecce (4 di 1).png" alt="img6" loading="lazy"></a>
-            <a><img src="img/croped/reportage/croped/Campanelli 18.jpg"data-full="img/croped/reportage/Campanelli 18.jpg" alt="img6" loading="lazy"></a>
-            <a><img src="img/croped/reportage/croped/Street Lecce (5 di 1).png"data-full="img/croped/reportage/Street Lecce (5 di 1).png" alt="img6" loading="lazy"></a>
-            <a><img src="img/croped/reportage/croped/Campanelli 19.jpg"data-full="img/croped/reportage/Campanelli 19.jpg" alt="img6" loading="lazy"></a>
-            <a><img src="img/croped/reportage/img14.jpg"data-full="img/croped/reportage/img14.jpg" alt="img6" loading="lazy"></a>
-            <a><img src="img/croped/reportage/croped/Campanelli 2.jpg"data-full="img/croped/reportage/Campanelli 2.jpg" alt="img6" loading="lazy"></a>
-            <a><img src="img/croped/reportage/croped/Campanelli 3.jpg"data-full="img/croped/reportage/Campanelli 3.jpg" alt="img6" loading="lazy"></a>
-            <a><img src="img/croped/reportage/croped/Campanelli 4.jpg"data-full="img/croped/reportage/Campanelli 4.jpg" alt="img6" loading="lazy"></a>
-            <a><img src="img/croped/reportage/croped/Campanelli 5.jpg"data-full="img/croped/reportage/Campanelli 5.jpg" alt="img6" loading="lazy"></a>
-            <a><img src="img/croped/reportage/croped/Campanelli 6.jpg"data-full="img/croped/reportage/Campanelli 6.jpg" alt="img6" loading="lazy"></a>
+      <a><img src="img/croped/nrit.jpg" data-full="img/gallery/nrit.jpg" alt="img6" loading="lazy"></a>
+      <a><img src="img/croped/img6.jpg" data-full="img/gallery/img1(6).jpg" alt="img6" loading="lazy"></a>
+      <a><img src="img/croped/img12.jpeg" data-full="img/gallery/portrait.jpeg" alt="img12" loading="lazy"></a>
+      <a><img src="img/croped/ritratti/A81D8A6B-7D5D-4C95-9D8C-A524C465BF60.jpeg" data-full="img/croped/ritratti/js/A81D8A6B-7D5D-4C95-9D8C-A524C465BF60.jpeg" alt="img12" loading="lazy"></a>
     </div>
     
     <!-- Modal pour afficher les images en haute résolution -->
