--- a/index.html
+++ b/index.html
@@ -59,11 +59,15 @@
             <div class="sepbar"></div>
             <p style="margin-top: 0.5%; font-size: 19px;">FOTOGRAFIA A MAGLIE E TUTTO IL SALENTO</p>
         </div>
-        <div class="cstext" id="stext">
+        <div class="container">
           <img id="ncover" src="F95C1B95-EB21-4E27-AB3B-227B9F6A35F4.jpeg" alt="">
-          <p class="titleL">La Fotografia come Arte...</p>
-          <p class="titleR">...La Vita come Ispirazione</p>
-          <p class="titleM">La Fotografia come Arte, la Vita come Ispirazione</p>
+          <div class="text-wrapper">
+              <p class="titleL">La Fotografia come Arte...</p>
+              <p class="titleR">...La Vita come Ispirazione</p>
+          </div>
+      </div>
+      
+         
           <p style="font-family: 'GeosansLight', sans-serif; text-align: center !important; margin-top: 50px !important;">Benvenuti nel mondo di Physis Studio, dove ogni scatto racconta una storia unica e irripetibile. Specializzato in una vasta gamma di servizi fotografici, il mio obiettivo è quello di immortalare emozioni genuine e momenti preziosi che durano per sempre.</p>
           <ul>
             <h1>Passione e Creatività</h1>
@@ -189,10 +193,13 @@
     <div id="falbum">
       <a><img src="img/croped/ritratti/3C637E92-5291-437B-B8E4-7BC9CA4E89A3.jpeg" data-full="img/croped/ritratti/js/3C637E92-5291-437B-B8E4-7BC9CA4E89A3.jpeg" alt="img6" loading="lazy"></a>
       <a><img src="img/croped/reportage/img13.jpg"data-full="img/croped/reportage/img13.jpg" alt="img6" loading="lazy"></a>
+      <a><img src="img/croped/img6.jpg" data-full="img/gallery/img1(6).jpg" alt="img6" loading="lazy"></a>
       <a><img src="img/croped/matrimoni/croped/Coppie (1 di 1).png"       data-full="img/croped/matrimoni/Coppie (1 di 1).png" alt="img6" loading="lazy"></a>
       <a><img src="img/croped/ritratti/09DFD939-89F3-4DF6-96FA-E339F3D7BA41.jpeg" data-full="img/croped/ritratti/js/09DFD939-89F3-4DF6-96FA-E339F3D7BA41.jpeg" alt="img9" loading="lazy"></a>
+      <a><img src="img/croped/img9.jpeg" data-full="img/gallery/img1(9).jpeg" alt="img9" loading="lazy"></a>
       <a><img src="img/croped/pet/croped/0627F98E-22F8-4D30-9291-EDF5F13DFB04.jpeg" data-full="img/croped/pet/0627F98E-22F8-4D30-9291-EDF5F13DFB04.jpeg" alt="img6"></a>
       <a><img src="img/croped/eventi/croped/Comp (2 di 1)-min.jpg"         data-full="img/croped/eventi/Comp (2 di 1)-min.jpg" alt="img6" loading="lazy"></a>
+      <a><img src="img/croped/img12.jpeg" data-full="img/gallery/portrait.jpeg" alt="img12" loading="lazy"></a>
       <a><img src="img/croped/ritratti/243F999B-1D1C-447F-A19B-5311A96698D0.jpeg" data-full="img/croped/ritratti/js/243F999B-1D1C-447F-A19B-5311A96698D0.jpeg" alt="img12" loading="lazy"></a>
       <a><img src="img/croped/reportage/croped/Campanelli 13.jpg"data-full="img/croped/reportage/Campanelli 13.jpg" alt="img6" loading="lazy"></a>
       <a><img src="img/croped/aziende/img1(10).jpg"       data-full="img/croped/aziende/img1(10).jpg" alt="img6" loading="lazy"></a>
