--- a/index.html
+++ b/index.html
@@ -61,8 +61,10 @@
         </div>
         <div class="cstext" id="stext">
           <img id="ncover" src="F95C1B95-EB21-4E27-AB3B-227B9F6A35F4.jpeg" alt="">
-          <p class="titleL">La Fotografia come Arte...</p>
-          <p class="titleR">...La Vita come Ispirazione</p>
+          <div id="slogan">
+            <p class="titleL">La Fotografia come Arte...</p>
+            <p class="titleR">...La Vita come Ispirazione</p>
+          </div>
           <p class="titleM">La Fotografia come Arte, la Vita come Ispirazione</p>
           <p style="font-family: 'GeosansLight', sans-serif; text-align: center !important; margin-top: 50px !important;">Benvenuti nel mondo di Physis Studio, dove ogni scatto racconta una storia unica e irripetibile. Specializzato in una vasta gamma di servizi fotografici, il mio obiettivo è quello di immortalare emozioni genuine e momenti preziosi che durano per sempre.</p>
           <ul>
